# cpp-orderbook

./: CMakeLists.txt  README.md  architecture.drawio
benchmark/: CMakeLists.txt  main.cpp
include/: book_map.h  core.h  id_allocator.h  order.h  order_command_worker.h  order_pool.h  order_routing_system.h  orderbook.h  price_level.h  price_level_v2.h  producer.h  spsc_queue.h  thread_id_allocator.h  worker.h
src/: CMakeLists.txt  bench_insert.cpp  bench_insert_m.cpp  bench_insert_s.cpp  bench_match20_m.cpp  bench_match20_s.cpp  main.cpp  main_single.cpp
tests/: CMakeLists.txt  test_orderbook.cpp  test_price_level.cpp
